# retro-tetris

./: Cargo.toml  LICENSE  Makefile  README.md  index.html
docs/reviews/: modularity-review.html  modularity-review.md
pkg/: tetris_wasm.d.ts  tetris_wasm.js  tetris_wasm_bg.wasm.d.ts
tetris-server/: Cargo.toml
tetris-server/src/: main.rs
tetris-wasm/: Cargo.toml
tetris-wasm/src/: lib.rs
web/: index.html
web/pkg/: package.json  tetris_wasm.d.ts  tetris_wasm.js  tetris_wasm_bg.wasm  tetris_wasm_bg.wasm.d.ts
