[package]
name = "tetris-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "HtmlElement",
  "Element",
  "CanvasRenderingContext2d",
  "Performance",
  "KeyboardEvent",
  "EventTarget",
  "EventListener",
  "CssStyleDeclaration",
  "Storage",
]

[profile.release]
opt-level = "s"
